Desktop LiveLoc viewer